--- a/template/src/App.css
+++ b/template/src/App.css
@@ -30,3 +30,15 @@
     transform: rotate(360deg);
   }
 }
+
+.cbtn {
+  display:block;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  border: 1px solid yellow;
+  margin-bottom: 60px;
+  margin-left: 90%;
+  margin-right: 10px;
+  
+}
